<resources>
    <string name="company_name">Soft Tech</string>
    <string name="app_name">ShopBillInventory</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="pleasegotoemailtochnagepassword">Email is sent to gmail \n Please go to the Gmail to Change the Passord</string>
    <string name="dashboard">Dashboard</string>
    <string name="billhistory">Bill History</string>
    <string name="BussInfo">Bussi. Info</string>
    <string name="oneMonth">1 Month</string>
    <string name="threeMonths">3 Month</string>
    <string name="oneYear">1 Year</string>
    <string name="oneMonthAmt">1</string>
    <string name="ThreeMonthsAmt">1099</string>
    <string name="oneYearAmt">4444</string>

    <string name="onemonthDesc">This is valid for 28 days</string>
    <string name="threemonthDesc">This is valid for 84 days</string>
    <string name="oneyearDesc">This is valid for 364 days</string>

    <string name="bussinessDescription">Bussiness Description</string>
    <string name="bussinessName">Bussiness Name</string>
    <string name="bussinessAddress">Bussiness Address</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="fbid">Facebook Id</string>
    <string name="instaid">Instagram Id</string>
    <string name="confirmlogout">Confirm Logout</string>
    <string name="confirmsharebill">Share Bill</string>
    <string name="areyousuretologout">Are you sure you want to logout?</string>
    <string name="areyousuretosharetowhatsup">Are you sure you want to share bill on whatsapp?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yourplanexpired">Your Plan is Expired</string>
    <string name="pleaserechargetostartbilling">Please Recharge to start the billing</string>
    <string name="pleasecontact">Please contact to 8421888138 \n to recharge for your app</string>

    <string name="downloadimage">Download Card</string>
    <string name="suretodownloadimage">Do you want to download the Card?</string>

</resources>