<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Fragment_Bussiness_info">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Include Toolbar -->
            <include
                android:id="@+id/includeToolbar"
                layout="@layout/custom_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize" />

            <!-- Rest of your content -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Your existing content here -->

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvOfBussinessData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    app:cardBackgroundColor="@color/purple_700"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintTop_toTopOf="parent">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tilofBussinessName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginVertical="10dp"
                            android:hint="@string/bussinessName"
                            app:hintTextColor="@color/red"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etBussinessName"
                                android:layout_width="match_parent"
                                android:layout_height="80dp"
                                android:layout_gravity="top"
                                android:gravity="start"
                                android:maxLines="5">

                            </com.google.android.material.textfield.TextInputEditText>


                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tilofBussinessDiscription"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginVertical="10dp"
                            android:hint="@string/bussinessDescription"
                            app:hintTextColor="@color/red"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tilofBussinessName">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etBussinessDescription"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="top"
                                android:gravity="start"
                                android:maxLines="6">

                            </com.google.android.material.textfield.TextInputEditText>


                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tilofBussinessAddress"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginVertical="10dp"
                            android:hint="@string/bussinessAddress"
                            app:hintTextColor="@color/red"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tilofBussinessDiscription">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etBussinessAddress"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="top"
                                android:gravity="start"
                                android:maxLines="6">

                            </com.google.android.material.textfield.TextInputEditText>


                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tilofMobileumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginVertical="10dp"
                            android:hint="@string/mobileNumber"
                            app:hintTextColor="@color/red"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tilofBussinessAddress">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etMobileNumber"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="top"
                                android:gravity="start"
                                android:maxLines="6">

                            </com.google.android.material.textfield.TextInputEditText>


                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tiloffbId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginVertical="10dp"
                            android:hint="@string/fbid"
                            app:hintTextColor="@color/red"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tilofMobileumber">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etfbId"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="top"
                                android:gravity="start"
                                android:maxLines="6">

                            </com.google.android.material.textfield.TextInputEditText>


                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tilofInstId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginVertical="10dp"
                            android:hint="@string/instaid"
                            app:hintTextColor="@color/red"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tiloffbId">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etinstaId"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="top"
                                android:gravity="start"
                                android:maxLines="6">

                            </com.google.android.material.textfield.TextInputEditText>


                        </com.google.android.material.textfield.TextInputLayout>


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="80dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cvOfBussinessData">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/teal_200"
                        android:text="Save"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:visibility="gone"
                        android:id="@+id/btnUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:backgroundTint="@color/teal_200"
                        android:text="Update"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnSave" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
